--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: MYHfusionRcpp
 Type: Package
 Title: Packed codes of Ming-Yueh Huang's work
-Version: 0.3.3
+Version: 0.3.4
 Date: 2024-10-23
 Author: Ming-Yueh Huang
 Maintainer: Ming-Yueh Huang
@@ -16,7 +16,9 @@ Imports: Rcpp (>= 1.0.9),
     RcppArmadillo,
     frailtypack,
     survival,
-    dfoptim
+    dfoptim,
+    abind,
+    dplyr
 LinkingTo: Rcpp, RcppArmadillo
 SystemRequirements: C++11
 NeedsCompilation: yes
